5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1832_1647.log
== TEST (2019-06-13 18:14:49) 
-- CODE:
from numpy import*
y=o
x=array(eval(input("frequenciados alunos  ")))
for elemeto in x:
	if(elemento>=70):
		y=y+1
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:14:49) 
-- CODE:
from numpy import*
y=o
x=array(eval(input("frequenciados alunos  ")))
for elemeto in x:
	if(elemento>=70):
		y=y+1
	print(y)
-- EXECUTION TIME:
0.927187
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 2, in <module>
    y=o
NameError: name 'o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:15:02) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemeto in x:
	if(elemento>=70):
		y=y+1
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:15:56) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:16:02) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:16:38) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:37:28) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in >= x:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
	
	
-- EXECUTION TIME:
0.708571
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 8
    for w in >= x:
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:37:30) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in >= x:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
	
	
-- ERROR:
File "XXXX", line 8
    for w in >= x:
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:37:51) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
	
	
-- EXECUTION TIME:
0.88209
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
frequenciados alunos  4
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
frequenciados alunos  1
[0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:37:52) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:38:23) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
	
	
-- EXECUTION TIME:
0.864107
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:38:56) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
   m=zeros(y,dtype(int))
print(m)
	
	
-- ERROR:
File "XXXX", line 12
    m=zeros(y,dtype(int))
                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:39:02) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
   m=zeros(y,dtype(int))
print(m)
	
	
-- EXECUTION TIME:
0.558294
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 12
    m=zeros(y,dtype(int))
                        ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:39:05) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:39:08) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
	
	
-- EXECUTION TIME:
1.07255
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:40:08) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:41:52) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
	
	
-- EXECUTION TIME:
0.883776
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:43:26) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
      m=zeros(y,dtype(int))
print(m)
	
	
-- EXECUTION TIME:
0.62484
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 12
    m=zeros(y,dtype(int))
                        ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:43:28) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
      m=zeros(y,dtype(int))
print(m)
	
	
-- ERROR:
File "XXXX", line 12
    m=zeros(y,dtype(int))
                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:43:35) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:43:39) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
	
	
-- EXECUTION TIME:
0.810186
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:50:23) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:50:46) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in x:
	y=7
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:51:32) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
	
	
-- EXECUTION TIME:
1.05337
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:00:29) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
a=0
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
		a=a+1
m=zeros(a,dtype(int))
print(m)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:00:33) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
a=0
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
		a=a+1
m=zeros(a,dtype(int))
print(m)
	
	
-- EXECUTION TIME:
0.757368
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
3
[]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:00:35) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
a=0
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
		a=a+1
m=zeros(a,dtype(int))
print(m)
	
	
-- EXECUTION TIME:
1.20774
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:00:41) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
a=0
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
		a=a+1
m=zeros(a,dtype(int))
print(m)
	
	
-- EXECUTION TIME:
0.924816
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
3
[]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:00:42) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
a=0
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
		a=a+1
m=zeros(a,dtype(int))
print(m)
	
	
-- EXECUTION TIME:
1.53058
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
frequenciados alunos  1
[0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:01:39) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
a=0
for w in x:
	y=0
	if(x[y]>=70):
		a=a+y
		y=y+1
m=zeros(a,dtype(int))
print(m)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:01:43) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
a=0
for w in x:
	y=0
	if(x[y]>=70):
		a=a+y
		y=y+1
m=zeros(a,dtype(int))
print(m)
	
	
-- EXECUTION TIME:
0.734578
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:01:47) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
a=0
for w in x:
	y=0
	if(x[y]>=70):
		a=a+y
		y=y+1
m=zeros(a,dtype(int))
print(m)
	
	
-- EXECUTION TIME:
0.895838
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:05:29) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(a,dtype(int))
print(m)
	
	
-- EXECUTION TIME:
0.822721
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 12, in <module>
    m=zeros(a,dtype(int))
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:05:36) 
-- CODE:
from numpy import*
y=0
x=array(eval(input("frequenciados alunos  ")))
for elemento in x:
	if( elemento >= 70):
		y=y+1
print(y)
for w in x:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
	
	
-- EXECUTION TIME:
0.939732
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
